# grpc-pdfserver-rs

./: Cargo.toml  README.md  build.rs
proto/: pdfserver.proto
src/: client.main.rs  pdfserverpb.rs  server.main.rs
src/client/: fixtures.rs
